--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,7 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: "Space Grotesk", sans-serif;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100vh;
+}
 
 :root {
   --radius: 0.625rem;
